Improved Mobile Quality Of Life ⬢ Disabled overscroll ⬢ Properly aligned hamburger menu icon ⬢ Shortened Project subheaders ⬢ Fixed permanent hero section span

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("https://use.fontawesome.com/releases/v6.2.1/css/all.css");
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap');
 
+
 :root {
     /* Golden Ratios */
     --golden-ratio-a: 00.056;
@@ -57,6 +58,9 @@
     --accent-gradient-radial-0: radial-gradient(circle at top left, var(--accent-0), var(--accent-1));
     --mono-gradient-0: linear-gradient(0deg, var(--color-3), var(--color-3));
     --card-gradient-0: radial-gradient(transparent, var(--color-2));
+
+    /* window width*/
+    --width: 0px;
 }
 
 * {
@@ -82,8 +86,9 @@ body {
     background-color: grey;
 
     margin: 0 auto;
-
     overflow-x: hidden;
+
+    overscroll-behavior-y: none;
 }
 
 img {
@@ -196,13 +201,18 @@ p {
     transition: .6s ease background-color;
 }
 
+#header .container {
+    align-items: start;
+    display: flex;
+    justify-content: start;
+}
+
 #header .nav-bar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
+    width: var(--width);
     height: 100%;
-    max-width: 100vw;
     padding: 0 var(--gr-rem-3);
 }
 
@@ -242,7 +252,7 @@ p {
     display: block;
     padding: var(--gr-rem-1) 0;
     transition: 0.3s ease color;
-    margin: 0 var(--gr-rem-0);
+    margin: 0 0 0 var(--gr-rem-0);
 }
 
 #header .nav-list ul a::after {
@@ -280,7 +290,7 @@ p {
     z-index: 100;
     height: var(--gr-rem-2);
     width: var(--gr-rem-2);
-    margin: var(--gr-rem-0) var(--gr-rem-1) var(--gr-rem-0) 0;
+    margin: var(--gr-rem-0) 0;
     display: inline-block;
     border: var(--gr-rem-c) solid white;
     position: relative;
@@ -967,7 +977,7 @@ p {
 @keyframes text_reveal_name {
     100% {
         color: var(--accent-1);
-        background-color: var(--accent-1);
+        background-color: transparent;
         background-image: var(--accent-gradient-0);
         background-size: 100%;
         -webkit-background-clip: text;
